[gd_scene load_steps=31 format=3 uid="uid://ccp4ntv4o8pki"]

[ext_resource type="Script" uid="uid://bb7oye8qve2pw" path="res://general/hitbox.gd" id="1_8q4tx"]
[ext_resource type="Script" uid="uid://b806deawmraku" path="res://enemies/charger/enemy_charger.gd" id="1_h56um"]
[ext_resource type="PackedScene" uid="uid://dh4r1g6730v4m" path="res://enemies/healthbar.tscn" id="2_kxtf1"]
[ext_resource type="Material" uid="uid://uau5jm8slqrd" path="res://enemies/damage_effect.tres" id="3_h56um"]
[ext_resource type="BoxMesh" uid="uid://bf12t5tj44mei" path="res://enemies/damage_pass.tres" id="4_yfhys"]
[ext_resource type="Script" uid="uid://ckhi5n4l5gx12" path="res://general/state_machine.gd" id="5_kxtf1"]
[ext_resource type="Script" uid="uid://dhm5fwuqsavxw" path="res://enemies/charger/charger_walk.gd" id="7_ekpk7"]
[ext_resource type="Script" uid="uid://bcasxl8qwy38" path="res://enemies/charger/getready.gd" id="8_lfmeq"]
[ext_resource type="Script" uid="uid://k2ke6e1dgucr" path="res://enemies/charger/charger_charge.gd" id="8_vyyrx"]
[ext_resource type="Script" uid="uid://bckup3etvquuc" path="res://enemies/charger/charger_stun.gd" id="9_djnsv"]
[ext_resource type="Script" uid="uid://wnq3cutdkdr2" path="res://enemies/inactive.gd" id="10_djnsv"]
[ext_resource type="Script" uid="uid://cbxtqhmhq4ogv" path="res://general/move_and_slide.gd" id="11_k4bws"]
[ext_resource type="Script" uid="uid://bt2tvpim8duvp" path="res://enemies/charger/charger_descend.gd" id="11_w8rxm"]
[ext_resource type="Script" uid="uid://3i45w63w33od" path="res://enemies/charger/charger_damager.gd" id="12_k4bws"]
[ext_resource type="Script" uid="uid://ciw6pntyhhunw" path="res://enemies/charger/charger_ascend.gd" id="12_lfmeq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bjn0k"]
size = Vector3(1, 1.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5b1ru"]
size = Vector3(1.2, 1.3, 1.2)

[sub_resource type="PlaneMesh" id="PlaneMesh_ekpk7"]

[sub_resource type="ViewportTexture" id="ViewportTexture_272bh"]
viewport_path = NodePath("ProgressBarViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vyyrx"]
resource_local_to_scene = true
transparency = 1
blend_mode = 4
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.14902)
albedo_texture = SubResource("ViewportTexture_272bh")

[sub_resource type="BoxShape3D" id="BoxShape3D_h2c1j"]
size = Vector3(1, 0.3, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2c1j"]
depth_draw_mode = 1
albedo_color = Color(0.109804, 0.439216, 1, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_158qd"]
material = SubResource("StandardMaterial3D_h2c1j")
size = Vector3(1, 1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_4ctxy"]
material = SubResource("StandardMaterial3D_h2c1j")
size = Vector3(1, 1, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i6621"]
depth_draw_mode = 1
albedo_color = Color(0, 0, 0, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_vo0o2"]
material = SubResource("StandardMaterial3D_i6621")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4haie"]
depth_draw_mode = 1
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_ek1cb"]
material = SubResource("StandardMaterial3D_4haie")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5b1ru"]
albedo_color = Color(0.278431, 0.0627451, 0.854902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_k4bws"]
material = SubResource("StandardMaterial3D_5b1ru")
size = Vector3(1, 0.1, 0.1)

[node name="Enemy_charger" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_h56um")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.115057, 0)
shape = SubResource("BoxShape3D_bjn0k")

[node name="Hitbox" type="Area3D" parent="." node_paths=PackedStringArray("Collider", "healthbar", "particles")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.38999, 0)
script = ExtResource("1_8q4tx")
Collider = NodePath("HitboxCol")
healthbar = NodePath("HealthBar")
particles = NodePath("Particles")
max_health = 1.0

[node name="HitboxCol" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29499, 0)
shape = SubResource("BoxShape3D_5b1ru")

[node name="HealthBar" parent="Hitbox" instance=ExtResource("2_kxtf1")]
transform = Transform3D(2.87319, 0, 0, 0, 0.0541109, 0, 0, 0, 0.45289, 0, 3.02258, 0)
mesh = SubResource("PlaneMesh_ekpk7")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_vyyrx")

[node name="Particles" type="GPUParticles3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0695744, 0)
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource("3_h56um")
draw_pass_1 = ExtResource("4_yfhys")

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_kxtf1")
metadata/_custom_type_script = "uid://ckhi5n4l5gx12"

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource("10_djnsv")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("7_ekpk7")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Getready" type="Node" parent="StateMachine"]
script = ExtResource("8_lfmeq")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource("8_vyyrx")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("9_djnsv")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Descend" type="Node" parent="StateMachine"]
script = ExtResource("11_w8rxm")

[node name="Ascend" type="Node" parent="StateMachine"]
script = ExtResource("12_lfmeq")

[node name="MoveAndSlide" type="Node" parent="."]
script = ExtResource("11_k4bws")
metadata/_custom_type_script = "uid://cbxtqhmhq4ogv"

[node name="ChargeCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.001
one_shot = true

[node name="Damager" type="Area3D" parent="." groups=["EnemyDamage"]]
unique_name_in_owner = true
transform = Transform3D(-0.00174533, 0, 0.999998, 0, 1, 0, -0.999998, 0, -0.00174533, 0, 0.299237, -1.02748)
collision_layer = 3
collision_mask = 3
script = ExtResource("12_k4bws")

[node name="DamageCollider" type="CollisionShape3D" parent="Damager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 2.32831e-10, 0, 1, 0, -2.32831e-10, 0, 1, -0.599424, -0.0460008, -0.00104619)
shape = SubResource("BoxShape3D_h2c1j")

[node name="Mesh" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Body" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
mesh = SubResource("BoxMesh_158qd")

[node name="Body2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.8, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, 0, 0)
mesh = SubResource("BoxMesh_4ctxy")

[node name="Eyeball2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(-0.000174539, 0, -0.0999998, 0, 0.1, 0, 0.0999998, 0, -0.000174539, 0.209269, 0.237286, 0.251982)
mesh = SubResource("BoxMesh_vo0o2")

[node name="Eye2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(-0.000349077, 0, -0.2, 0, 0.2, 0, 0.2, 0, -0.000349077, 0.204018, 0.237286, 0.15851)
mesh = SubResource("BoxMesh_ek1cb")

[node name="Eyeball3" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.00017453, 0, 0.0999999, 0, 0.1, 0, -0.0999999, 0, 0.00017453, 0.204018, 0.237286, -0.251042)
mesh = SubResource("BoxMesh_vo0o2")

[node name="Eye3" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.00034906, 0, 0.2, 0, 0.2, 0, -0.2, 0, 0.00034906, 0.209269, 0.237286, -0.157569)
mesh = SubResource("BoxMesh_ek1cb")

[node name="DamageMesh" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.999998, 0, 0.00174529, 0, 1, 0, -0.00174529, 0, 0.999998, 0.464638, 0.243698, 2.031e-08)
mesh = SubResource("BoxMesh_k4bws")
skeleton = NodePath("../../Damager")

[connection signal="died" from="Hitbox" to="." method="_on_hitbox_died"]
[connection signal="took_damage" from="Hitbox" to="." method="_on_hitbox_took_damage"]
[connection signal="area_entered" from="Damager" to="Damager" method="_on_area_entered"]
[connection signal="parried" from="Damager" to="." method="_on_damager_parried"]
